# Unified-Agent-Gateway

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  cli.py  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
api/: http.py  windsurf_analytics.py
config/: settings.py
context/: agents_md.py  cline_rules.py  contextforge.py  gemini_md.py  gemini_skills.py  md_hierarchy.py  registry.py  windsurf_rules.py
core/: agent_loop.py  execution.py  handoff.py  types.py
docs/: API_SPEC.md  ARCHITECTURE.md
postman/: unified-agent-gateway.postman_collection.json  unified-agents-sdk.postman_collection.json
providers/: anthropic.py  base.py  claude_agent.py  codex_provider.py  copilot_provider.py  cursor_cloud_agent.py  deepseek.py  gemini.py  groq.py  mistral.py  openai_compatible.py  openai_responses.py  xai.py
runtime/: bootstrap.py  codex_app_server.py  codex_mcp_bridge.py  cursor_webhook.py  gemini_mcp_bridge.py  github_mcp_bridge.py  router.py  sse.py  windsurf_mcp_bridge.py
tests/: test_agent_loop.py  test_anthropic_provider.py  test_api.py  test_claude_agent_provider.py  test_cline_rules.py  test_codex_provider.py  test_context_registry.py  test_copilot_provider.py  test_cursor_cloud_agent_provider.py  test_deepseek_provider.py  test_dynamic_md_context.py  test_execution.py  test_gemini_mcp_bridge.py  test_gemini_md.py  test_gemini_provider.py  test_gemini_skills.py  test_groq_provider.py  test_handoff.py  test_mcp_http_client.py  test_mcp_loader.py  test_mistral_provider.py  test_openai_provider.py  test_openai_responses_provider.py  test_router.py  test_settings.py  test_sse.py  test_tool_registry.py  test_types.py  test_windsurf_rules_mcp_bridge.py  test_xai_provider.py
tools/: mcp_config_loader.py  mcp_http_client.py  mcp_loader.py  registry.py
