[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-agents-sdk"
version = "0.2.1"
description = "Product-agnostic agent SDK with normalized provider adapters"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Philip D'Souza" },
]
requires-python = ">=3.10"
keywords = ["llm", "agent", "gateway", "openai", "anthropic", "gemini", "groq", "deepseek", "mistral", "xai", "grok", "mcp", "fastapi", "sse", "tool-calling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "openai>=1.0",
    "anthropic>=0.40",
    "google-genai>=1.0",
    "groq>=0.4",
    "mistralai>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anyio>=4.0",
    "mcp>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
uag = "cli:app"

[project.urls]
Homepage = "https://github.com/PhilipAD/Unified-Agents-SDK"
Repository = "https://github.com/PhilipAD/Unified-Agents-SDK"
Documentation = "https://github.com/PhilipAD/Unified-Agents-SDK#readme"
Changelog = "https://github.com/PhilipAD/Unified-Agents-SDK/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "coverage>=7.0",
    "ruff>=0.6",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live API keys (deselect with -m 'not integration')",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "providers", "tools", "context", "runtime", "api", "config"]

[tool.hatch.build.targets.wheel.force-include]
"cli.py" = "cli.py"
"py.typed" = "py.typed"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
